[project]
name = "npc-ccf-utils"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "bjhardcastle", email = "ben.hardcastle@alleninstitute.org" }
]
requires-python = ">=3.10"
dependencies = [
    "altair<5.5.0",
    "geopandas>=1.0.1",
    "matplotlib>=3.10.0",
    "npc-io>=0.1.32",
    "numba>=0.61.0",
    "polars[pyarrow]>=1.23.0",
    "pynrrd>=1.1.3",
    "rasterio>=1.4.3",
    "shapely>=2.0.7",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
